Layout of sidebar and content containers

--- a/assignments/twitch/RW-Twitch/index.html
+++ b/assignments/twitch/RW-Twitch/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
     <title>Twitch App</title>
     <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
-<div id="react-container">
-</div>
-<script src="main.js"></script>
+    <div id="react-container" class="react-container">
+    </div>
+    <script src="main.js"></script>
 </body>
+
 </html>
