--- a/assignments/twitch/EthanRhodes_Twitch/index.html
+++ b/assignments/twitch/EthanRhodes_Twitch/index.html
@@ -1,9 +1,17 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8" />
     <title>Twitch App</title>
     <link href="styles.css" rel="stylesheet">
+    <style>
+        body
+        {
+            background: #4b367c;
+            width: 100%;
+            height: 100%;
+            z-index: -13;
+        }
+    </style>
 </head>
 <body>
 <div id="react-container">
