--- a/assignments/twitch/twitch_brady/index.html
+++ b/assignments/twitch/twitch_brady/index.html
@@ -9,5 +9,6 @@
 <div id="react-container">
 </div>
 <script src="main.js"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 </body>
 </html>
