--- a/assignments/twitch/twitch-sean/index.html
+++ b/assignments/twitch/twitch-sean/index.html
@@ -5,7 +5,7 @@
     <title>Twitch App</title>
     <link href="styles.css" rel="stylesheet">
 </head>
-<body style="background-color: purple">
+<body>
 <div id="react-container">
 </div>
 <script src="main.js"></script>
